--- a/_site.yml
+++ b/_site.yml
@@ -1,5 +1,6 @@
 name: "my-website"
 output_dir: "."
+style="background-color: #e3f2fd;"
 navbar:
   title: "My Website"
   type: inverse
@@ -10,20 +11,11 @@ navbar:
     - text: "About"
       icon: fa-info
       href: about.html
-    - text: "More"
-      icon: fa-gear
+    - text: "Produtos"
+      icon: fa fa-align-justify
       menu:
-        - text: "Heading 1"
-        - text: "Page A"
+        - text: "ERA-20C"
           href: page_a.html
-        - text: "Page B"
-          href: page_b.html
-        - text: "---------"
-        - text: "Heading 2"
-        - text: "Page C"
-          href: page_c.html
-        - text: "Page D"
-          href: page_d.html
   right:
     - icon: fa-question fa-lg
       href: https://example.com
